[tool.poetry]
name = "base45"
version = "0.4.4"
description = "Base45 Encoder/Decoder"
authors = ["Jakob Schlyter <jakob@kirei.se>"]
license = "BSD-2-Clause"
repository = "https://github.com/kirei/python-base45"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylama = "^7.7.1"
pytest = "^6.1.2"
pytest-black = "^0.3.12"
pytest-isort = "^1.2.0"

[tool.poetry.scripts]
base45 = "base45.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
