[tool.poetry]
name = "base45"
version = "0.5.0"
description = "Base45 Encoder/Decoder"
authors = ["Jakob Schlyter <jakob@kirei.se>"]
license = "BSD-2-Clause"
repository = "https://github.com/kirei/python-base45"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pytest = "^8.2.0"
isort = "^5.13.2"
pytest-isort = "^4.0.0"

[tool.poetry.scripts]
base45 = "base45.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001"]
