[project]
name = "base45"
dynamic = ["version"]
description = "Base45 Encoder/Decoder"
authors = [
    { name = "Jakob Schlyter", email = "jakob@kirei.se" }
]
license = "BSD-2-Clause"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/kirei/python-base45"

[project.scripts]
base45 = "base45.cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.2",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001"]
